parser/src/test/resources/corpus/valid/54_waterfall_decl.ff
waterfall "European Waterfall" {
  let pref_rate = 8% per annum
  distribute distributable through waterfall "Sub-Waterfall"
}
