parser/src/test/resources/corpus/invalid/27_distribute_missing_waterfall.ff
rule "Distribute Missing Waterfall Kw" {
  distribute amount through "European"
}
